# fractal_cartoons

./: Makefile  README.md  pyproject.toml  tox.ini
fractal_cartoons/generators/: __init__.py  cartoon_generators.py  symmetric_generators.py
tests/generators/: test_cartoon_generators.py  test_symmetric_generators.py
