[tool.poetry]
name = "fractal_cartoons"
version = "0.1.0"
description = "Package attempting to reproduce Mandelbrot fractal cartoons of the stock market"
authors = ["Pablo Alonso"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.2"
scipy = "^1.7.1"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^3.9.2"
tox = "^3.24.4"
mypy = "^0.910"
coverage = "^5.5"
watchdog = "^2.1.5"
Sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | Dockerfile
)/
'''
